<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="main_title">YVELAZE MAGARI TICTACTOE (MARTLA)</string>
    <string name="play_with_friend">PLAY WITH FRIEND</string>
    <string name="play_with_ai_omg">PLAY WITH AI OMG</string>
    <string name="go_back">GO BACK</string>
    <string name="start_playing">LETS PLAY</string>
    <string name="your_name_hint">ENTER YOUR NAME</string>
    <string name="friends_name_hint">ENTER FRIENDS NAME</string>
    <string name="your_name">YOUR NAME</string>
    <string name="friends_name">FRIENDS NAME</string>
    <string name="lashas_mama">LASHAS MAMA</string>
    <string name="reset_board">RESET BOARD</string>
    <string name="score_label">SCORE</string>
</resources>