<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/holo_purple">
    <Button
            android:text="@string/go_back"
            android:layout_width="200dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:id="@+id/goBack" android:textSize="20sp"/>
    <EditText
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/yourName1"
            android:hint="@string/your_name_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"/>
    <TextView
            android:text="@string/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.188"/>
    <Button
            android:text="@string/start_playing"
            android:layout_width="236dp"
            android:layout_height="85dp" android:id="@+id/startGame"
            android:textSize="35sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.478"/>
    <ImageView
            android:src="@drawable/lashas_mama_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="223dp" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.935" android:contentDescription="@string/lashas_mama"
            app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>