<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/holo_purple">
    <ImageView
            android:src="@drawable/tic_tac_toe_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/tic_tac_toe_icon"
            android:contentDescription="@string/main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
    />
    <Button
            android:text="@string/play_with_friend"
            android:layout_width="174dp"
            android:layout_height="57dp" android:id="@+id/playWithFriend"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.023"/>
    <Button
            android:text="@string/play_with_ai_omg"
            android:layout_width="174dp"
            android:layout_height="58dp" android:id="@+id/playWithAi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.023"/>
</androidx.constraintlayout.widget.ConstraintLayout>